fixed a bug that was truncating co-applicant race helper text on deselect

--- a/src/static/less/modules/chosen.less
+++ b/src/static/less/modules/chosen.less
@@ -1,7 +1,7 @@
 // Overrides for chosen's CSS
 
 ul.chzn-choices {
-  width: 130%;
+  width: 140%;
 }
 
 .chzn-container-multi .chzn-choices {
@@ -79,5 +79,9 @@ ul.chzn-choices {
 }
 
 #co_applicant_ethnicity_chzn .search-field {
+  width: 130%;
+}
+
+#co_applicant_race_1_chzn .search-field {
   width: 130%;
 }
